--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "the-gossip-project",
   "private": true,
-  "dependencies": {}
+  "dependencies": {
+    "bootstrap": "^4.2.1"
+  }
 }
